test/invalid/struct_colon.d
//T error: struct_colon.d:4:9:
//T error: expected 'OpenBrace', got 'Colon'.

struct S :
